# signaledge

./: .gitignore  Dockerfile  Dockerfile.n8n  N8N_WORKFLOW.md  README.md  n8n_workflow.json  pyproject.toml  signal_api.py  signal_engine.py
ai/: __init__.py  client.py
core/: deduplication.py  logging.py  performance_tracker.py  regime.py
prompts/: signal_score.txt
